# no-matter

./: Cargo.toml  styles.css
.github/workflows/: rust.yml
server/: Cargo.toml  no-matter.db
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20260101_000001_init.rs
server/src/: auth.rs  channels.rs  error.rs  files.rs  main.rs  messages.rs  state.rs
server/src/entities/: channel.rs  channel_member.rs  channel_read.rs  file.rs  mention.rs  message.rs  message_file.rs  mod.rs  prelude.rs  session.rs  user.rs
server/src/ws/: bus.rs  events.rs  gateway.rs  mod.rs
server/uploads/: 01KQ6F9QG8VDV9PQGN10E75F29
src/: app.rs  config.rs  main.rs  markdown.rs  realtime.rs  tauri_bridge.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  main.rs  system.rs  upload.rs  ws.rs
src/components/: chat.rs  login.rs  media.rs  message_list.rs  mod.rs  modals.rs  shell.rs  sidebar.rs  unread_badge.rs
src/server/: auth.rs  channels.rs  client.rs  messages.rs  mod.rs
src/stores/: auth.rs  channels.rs  messages.rs  mod.rs  route.rs  typing.rs  unread.rs  upload.rs
