[package]
name = "no-matter-ui"
authors = ["dmgolembiowski"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
futures-util = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Performance",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Element",
    "FormData",
    "File",
    "FileList",
    "Blob",
    "HtmlInputElement",
    "HtmlFormElement",
] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
gloo-net = { version = "0.6", features = ["http", "json"] }
serde_json = "1"

[workspace]
resolver = "2"
members = ["src-tauri", "server", "server/migration"]
