[package]
name = "no-matter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "macros",
    "with-chrono",
] }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"
thiserror = "1"
anyhow = "1"
