[package]
name = "no-matter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["full"] }
futures-util = { version = "0.3.32", features = ["sink"] }
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7.18", features = ["io"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
